@@ -1,4 +1,5 @@
 19-08-2004 Qball <Qball@qballcow.nl>
+	* src/tray-icon.c:	Rounded tooltip corners.
 	* src/tray-icon.c:	Fix crash when not connected
 	* src/tray-icon.c:	Show right tooltip when not connected
 
@@ -235,7 +236,7 @@ the more section
     *	Playlists view hide state is remembered over session.
     *	Time format is remembered over session.
     *	Fix bug #203. (crash when not connected and click on title bar)
-    
+
 06-03-2004 Qball <Qball@qballcow.nl>
     *	Added support for password authentification with mpd.
     *	Fixed highlighting bug in playlist.
